Add jlama to CI